--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ body {
 
 /* Hero Section */
 .hero {
-    background-image: url('imagens/Banner.jpg');
+    background-image: url('https://media.gettyimages.com/id/1408962045/pt/v%C3%ADdeo/rave-party-silhouettes.jpg?s=640x640&k=20&c=N_oNR3o8ck-_JFv_Jd2XbkBxL9eqMXPypPkl04cs2sc=');
     background-size: cover;
     background-position: center;
     height: 600px;
