--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ body {
 
 /* Hero Section */
 .hero {
-    background-image: url('https://media.gettyimages.com/id/1408962045/pt/v%C3%ADdeo/rave-party-silhouettes.jpg?s=640x640&k=20&c=N_oNR3o8ck-_JFv_Jd2XbkBxL9eqMXPypPkl04cs2sc=');
+    background-image: url('https://s2-g1.glbimg.com/cy84GJcCwXF6SjTjIzGRJPin_S8=/0x0:1080x721/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2025/J/h/a14AMoQ6qNhTMtIHFTBw/snapinst.app-469336394-580885934632128-468104826836622178-n-1080.jpg');
     background-size: cover;
     background-position: center;
     height: 600px;
