--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ body {
 
 /* Banner Section */
 .banner {
-    background-image: url('https://images.unsplash.com/photo-1429962714451-bb934ecdc4ec?auto=format&fit=crop&q=80&w=2070');
+    background-image: url('IMG_20230801_080815-1-scaled-1.jpg');
     background-size: cover;
     background-position: center;
     padding: 6rem 1rem;
